# ohpc-container

./: build-all.sh  images_pack.sh  images_unpack.sh
01-base-root/: build.sh
01-bos/: build.sh
02-base-ohpc/: build.sh
02-base-ohpc/openldap_config/: nsswitch.conf
02-node-network/: build.sh
02-node-network/openldap_config/: nslcd.conf
02-node-network/pam.d/: system-auth
02-node-openldap/: build.sh
02-node-openldap/php_ldap_admin_config/: config.php  nginx.conf
03-base-compute/: build.sh
03-base-master/: build.sh
03-node-slurm-control/: build.sh
03-node-slurm-control/custom_script/: job_submit.lua
03-node-slurm-control/slurm_config/: cgroup.conf  slurm.conf
03-node-slurm-control/systemd_config/: slurmrestd_override.conf
04-node-slurm-compute/: build.sh
04-node-slurm-compute/custom_script/: epilog.sh  task_epilog.sh  task_prolog.sh
04-node-slurm-compute/custom_script/check/client/: Cargo.toml
04-node-slurm-compute/custom_script/check/client/src/: main.rs
04-node-slurm-compute/custom_script/check/monitor/: Cargo.toml
04-node-slurm-compute/custom_script/check/monitor/src/: main.rs
04-node-slurm-compute/pam.d/: password-auth  sshd
04-node-slurm-compute/ssh_config/: sshd_config
04-node-slurm-compute/systemd_config/: node_monitor.service
04-node-slurm-control/: build.sh
04-node-slurm-control/custom_script/: mail_wrapper.sh
04-node-slurm-control/slurm_config/: gres.conf  slurmdbd.conf
04-node-slurm-control/systemd_config/: slurmctld_override.conf  (+1 more)
04-node-slurm-login/: build.sh
04-node-slurm-portal/: build.sh
(+2 files in other folders)
