[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1.47", features = ["full"] }

# JSON 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# 日志记录
log = "0.4"
env_logger = "0.11"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 错误处理
anyhow = "1.0"

# 系统信息
sysinfo = "0.36"
